tipo de projeto com time misto

--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -124,6 +124,10 @@
               <font color="red">Intercâmbio</font>
             {% endif %}
 
+            {% if projeto.time_misto %}
+              <font color="red">Time Misto</font>
+            {% endif %}
+
             <br>
 
             <ul class="grupo" style="margin-bottom: 6px;">
