--- a/projetos/templates/projetos/editar_projeto.html
+++ b/projetos/templates/projetos/editar_projeto.html
@@ -101,6 +101,9 @@
       {% endwith %}
     {% endfor %}
 
+    <br>
+    <input type="checkbox" id="time_misto" name="time_misto" value="True" {% if projeto.time_misto %}checked{% endif %}>
+    <label for="time_misto"> Time Misto (com estudantes de outra instituição)</label><br>  
 
     <br><br>
 
