--- a/projetos/templates/projetos/projeto_detalhes.html
+++ b/projetos/templates/projetos/projeto_detalhes.html
@@ -71,6 +71,9 @@
         <font color="red">Intercâmbio</font>
       {% endif %}
 
+      {% if projeto.time_misto %}
+        <font color="red">Time Misto</font>
+      {% endif %}
       
     </p>
   {% endif %}
