--- a/propostas/templates/propostas/procura_grupos.html
+++ b/propostas/templates/propostas/procura_grupos.html
@@ -176,6 +176,10 @@
             {% if projeto.proposta.intercambio %}
               <font color="red">Intercâmbio</font>
             {% endif %}
+
+            {% if projeto.time_misto %}
+              <font color="red">Time Misto</font>
+            {% endif %}
       
           </p>
         {% endif %}
