--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -152,6 +152,9 @@
                 {% if alocado.projeto.proposta.intercambio %}
                     <font color="red">[Intercâmbio]</font>
                 {% endif %}
+                {% if alocado.projeto.time_misto %}
+                    <font color="red">[Time Misto]</font>
+                {% endif %}
 
             </a>
             <br>
