--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -109,13 +109,24 @@
                     <a href="{% url 'projeto_completo' alocacao.projeto.id %}">
                       {{alocacao.projeto.get_titulo}}
                     </a>
-                    <a href="{% url 'organizacao_completo' alocacao.projeto.organizacao.id %}">
-                      ({{alocacao.projeto.organizacao}})<br>
-                    </a>
+                    {% if alocacao.projeto and alocacao.projeto.organizacao %}
+                      <a href="{% url 'organizacao_completo' alocacao.projeto.organizacao.id %}">
+                        ({{alocacao.projeto.organizacao}})<br>
+                      </a>
+                    {% else %}
+                      SEM ORGANIZAÇÃO
+                    {% endif %}
                     {% if alocacao.projeto.avancado %}
-                      <span style="color:red">
-                        (PFE Avançado)
-                      </span>
+                      <span style="color:red">(PFE Avançado)</span>
+                    {% endif %}
+                    {% if alocacao.projeto.proposta.internacional %}
+                      <span style="color:red">(Internacional)</span>
+                    {% endif %}
+                    {% if alocacao.projeto.proposta.intercambio %}
+                      <span style="color:red">(Intercâmbio)</span>
+                    {% endif %}
+                    {% if alocacao.projeto.time_misto %}
+                      <span style="color:red">(Time Misto)</span>
                     {% endif %}
                   {% endif %}
                 {% endfor %}
