--- a/documentos/templates/documentos/relatorios_publicos.html
+++ b/documentos/templates/documentos/relatorios_publicos.html
@@ -69,6 +69,9 @@
                 {% if relatorio.projeto.proposta.intercambio %}
                   [Intercâmbio]
                 {% endif %}
+                {% if relatorio.projeto.time_misto %}
+                  [Time Misto]
+                {% endif %}
                 </strong></u><br>
               {% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
                 </a>
