--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -247,6 +247,9 @@
               {% if projeto.proposta.intercambio %}
                 [Intercâmbio]
               {% endif %}
+              {% if projeto.time_misto %}
+                [Time Misto]
+              {% endif %}
             </strong></u><br>
           </li>
         </a>
