--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -307,6 +307,9 @@
             {% if projeto.proposta.intercambio %}
               [Intercâmbio]
             {% endif %}
+            {% if projeto.time_misto %}
+              [Time Misto]
+            {% endif %}
           </strong></u><br>
           
 
