--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -76,6 +76,10 @@
         <font color="red">Intercâmbio</font>
       {% endif %}
 
+      {% if projeto.time_misto %}
+        <font color="red">Time Misto</font>
+      {% endif %}
+
     </p>
   {% endif %}
   
