--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -175,6 +175,10 @@
             {% if projeto.proposta.intercambio %}
               <font color="red">Intercâmbio</font>
             {% endif %}
+
+            {% if projeto.time_misto %}
+              <font color="red">Time Misto</font>
+            {% endif %}
       
           </p>
         {% endif %}
