--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -127,9 +127,16 @@
                       {{alocacao.projeto.get_titulo}}
                     </a>
                     {% if alocacao.projeto.avancado %}
-                      <span style="color:red">
-                        [PFE Avançado]
-                      </span>
+                      <span style="color:red">[PFE Avançado]</span>
+                    {% endif %}
+                    {% if alocacao.projeto.proposta.internacional %}
+                      <span style="color:red">[Internacional]</span>
+                    {% endif %}
+                    {% if alocacao.projeto.proposta.intercambio %}
+                      <span style="color:red">[Intercâmbio]</span>
+                    {% endif %}
+                    {% if alocacao.projeto.time_misto %}
+                      <span style="color:red">[Time Misto]</span>
                     {% endif %}
                   {% endif %}
                 {% endfor %}
