--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -69,6 +69,7 @@
                   {% endcomment %}
               >
                 {{aluno.user.get_full_name}}
+                {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span>{% endif %}
               </a>
             </th>
             <td>
