--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -77,7 +77,7 @@
                   "
                   {% endcomment %}
               >
-                {{aluno.user.get_full_name}}
+                {{aluno.user.get_full_name}} {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span>{% endif %}
               </a>
             </th>
             <td style="text-align: right;">
