--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -27,9 +27,10 @@
             <th scope="col" class="text-center">Parceira<br>Desde</th>
             <th scope="col" class="text-center">Propostas<br>Enviadas</th>
             <th scope="col" class="text-center">Projetos<br>Fechados</th>
+            <th scope="col" class="text-center">Grupos<br>Fechados</th>
           </tr>
         </thead>
-        {% for organizacao,fechados,desde,contato in organizacoes_list %} 
+        {% for organizacao,fechados,desde,contato, grupos in organizacoes_list %} 
           <tr class="item">
 
           <th scope="row">
@@ -56,6 +57,10 @@
 
             <td class="text-center">
               {{fechados|stringformat:"03d"}}
+            </td>
+
+            <td class="text-center">
+              {{grupos}}
             </td>
 
           </tr>
