suporte ingles para orgs

--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-  <span class="titulo">Organizações Parceiras<a
+  <span class="titulo">{% if lingua == 'pt' %}Organizações Parceiras{% else %}Partnership Companies{% endif %}<a
       href="{% url 'cadastrar_organizacao' %}"
       >&#10133;</a>
   </span>
@@ -22,12 +22,12 @@
       <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm" style="width: 100%;">
         <thead class="table-info">
           <tr>
-            <th scope="col" class="text-center">Organização</th>
-            <th scope="col" class="text-center">Último<br>Contato</th>
-            <th scope="col" class="text-center">Parceira<br>Desde</th>
-            <th scope="col" class="text-center">Propostas<br>Enviadas</th>
-            <th scope="col" class="text-center">Projetos<br>Fechados</th>
-            <th scope="col" class="text-center">Grupos<br>Fechados</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Organização{% else %}Company{% endif %}</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Último <br>Contato{% else %}Last <br>Contact{% endif %}</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Parceira <br>Desde{% else %}Partner <br>Since{% endif %}</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Propostas <br>Enviadas{% else %}Submitted <br>Proposals{% endif %}</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Projetos <br>Fechados{% else %}Closed <br>Projects{% endif %}</th>
+            <th scope="col" class="text-center">{% if lingua == 'pt' %}Grupos de <br>Estudantes{% else %}Group of <br>Students{% endif %}</th>
           </tr>
         </thead>
         {% for organizacao,fechados,desde,contato, grupos in organizacoes_list %} 
@@ -69,8 +69,8 @@
     </div>
     <p>&nbsp;</p>
     {% comment %} <strong>Total de Organizações Parceiras:</strong> {{ total_organizacoes }}<br> {% endcomment %}
-    <strong>Total de Propostas Submetidas:</strong> {{ total_submetidos }}<br>
-    <strong>Total de Projetos Fechados:</strong> {{ total_fechados }}<br>
+    <strong>{% if lingua == 'pt' %}Total de Propostas Submetidas{% else %}Total of Submitted Proposals{% endif %}:</strong> {{ total_submetidos }}<br>
+    <strong>{% if lingua == 'pt' %}Total de Projetos Fechados{% else %}Total of Closed Projects{% endif %}:</strong> {{ total_fechados }}<br>
   {% else %}
     <p>Não existem organizações cadastradas.</p>
   {% endif %}
