reposicionando relatos quinzenais totais

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -9,6 +9,7 @@
     <br>
     <a href="{% url 'avisos_listar' %}"><h5>Agenda do PFE</h5></a>
     <a href="{% url 'emails' %}"><h5>Listas de e-mails</h5></a>
+    <a href="{% url 'relatos_quinzenais_todos' %}"><h5>Relatos Quinzenais</h5></a>
 
     <hr>
     <h5>Listagem completa</h5>
