reload de telas pelo back

--- a/professores/templates/professores/objetivos_rubricas.html
+++ b/professores/templates/professores/objetivos_rubricas.html
@@ -6,6 +6,8 @@
 {% endcomment %}
 
 {% block head %}
+  {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
+  {% include "reload.html" %}
 {% endblock %}
 
 {% block content %}
