--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   {% block head %}
   {% endblock %}
 </head>
-<body{% if request.get_host == "127.0.0.1:8000" %} style="background-color: #FFECEC;"{% endif %}>
+<body{% if request.get_host == "127.0.0.1:8000" %} style="background-color: #FFECEC;"{% endif %} class="pt">
   {% url 'index' as url_index %}
   {% url 'perfil' as url_perfil %}
 
