--- a/professores/templates/professores/objetivos_rubricas.html
+++ b/professores/templates/professores/objetivos_rubricas.html
@@ -169,7 +169,7 @@
       <br>
 
       <span lang="pt"><b>Definição</b>: {{objetivo.objetivo}}</span>
-      <span lang="en"><b>Definition</b>: {{objetivo.objetiv_en}}</span>
+      <span lang="en"><b>Definition</b>: {{objetivo.objetivo_en}}</span>
       <br>
 
       <span lang="pt"><b>Data Inicial</b>:</span>
