--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -50,10 +50,11 @@
             </ul>
         </li>
         
-        <li>Tabelas de Notas</li>
+        <li>Tabelas de Notas/Conceitos</li>
         <li style="list-style-type:none;margin-bottom: 1em;">
             <ul>
                 <a href="{% url 'estudantes_notas' %}"><li>Resultados das Avaliações dos Estudantes</li></a>
+                <a href="{% url 'estudantes_objetivos' %}"><li>Resultados dos Objetivos de Aprendizagem dos Estudantes</li></a>
                 <a href="{% url 'resultado_projetos' %}"><li>Resultados por Projeto</li></a>
             </ul>
         </li>
