--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -214,7 +214,9 @@
           {% endif %}
         {% endwith %}
 
-        <p class="estudantes" style="margin-left:1em;"><b>Estudantes:</b></p>
+        <p class="estudantes" style="margin-left:1em;"><b>Estudantes:</b>
+          <span class="emails esconder"><a href="mailto:{% for alocacao in projeto.alocacao_set.all %}&lt;{{alocacao.aluno.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}">&#x2709;</a></span>
+        </p>
         <ol class="estudantes" style="margin-bottom:5px;">
         {% for aluno,prioridade in prioridades %}
           <li><a class="imprimir" href="{% url 'estudante_detail' aluno.id %}"
@@ -234,7 +236,6 @@
           </li>
         {% endfor %}
         </ol>
-
 
         <p class="organizacao" style="margin-left:1em;"><b>Organização:</b>
           {% if projeto.organizacao %}
@@ -262,6 +263,9 @@
           {% else %}
             NÃO DEFINIDA
           {% endif %}
+
+          <span class="emails esconder"><a href="mailto:{% for conexao in conexoes %}&lt;{{conexao.parceiro.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}">&#x2709;</a></span>
+
         </p>
 
         <ol class="conexoes" style="margin-bottom:0px;">
@@ -319,7 +323,6 @@
         </td></tr>
       {% endfor %}
       </table>
-
 
       <hr>
       <div class="totais">
