--- a/templates/reload.html
+++ b/templates/reload.html
@@ -5,13 +5,11 @@
 {% endcomment %}
 
 <script>
-  window.onpageshow = function(evt) {
+  console.log("GERAL");
+  $(window).bind("pageshow", function(event) {
     console.log("ONPAGESHOW");
-    // If persisted then it is in the page cache, force a reload of the page.
-    if (evt.persisted) {
-        document.body.style.display = "none";
-        console.log("RELOAD");
-        location.reload();
+    if (event.originalEvent.persisted) {
+      console.log("RELOAD");
     }
-  };
+  });
 </script>
